Numeric tests working